--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -5,13 +5,14 @@ on:
     branches:
       - main
     paths-ignore:
-      - "scripts/**"
+      - 'scripts/**'
+      - 'README.md'
 
 env:
-  TF_CLOUD_ORGANIZATION: "${{ var.TF_CLOUD_ORGANIZATION }}"
-  TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
-  TF_WORKSPACE: "${{ var.TF_WORKSPACE }}"
-  CONFIG_DIRECTORY: "./"
+  TF_CLOUD_ORGANIZATION: ${{ var.TF_CLOUD_ORGANIZATION }}
+  TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
+  TF_WORKSPACE: ${{ var.TF_WORKSPACE }}
+  CONFIG_DIRECTORY: './'
 
 jobs:
   terraform:
