--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -9,9 +9,9 @@ on:
       - 'README.md'
 
 env:
-  TF_CLOUD_ORGANIZATION: ${{ var.TF_CLOUD_ORGANIZATION }}
+  TF_CLOUD_ORGANIZATION: ${{ vars.TF_CLOUD_ORGANIZATION }}
   TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
-  TF_WORKSPACE: ${{ var.TF_WORKSPACE }}
+  TF_WORKSPACE: ${{ vars.TF_WORKSPACE }}
   CONFIG_DIRECTORY: './'
 
 jobs:
